--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ p {
   justify-content: flex-start;
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 .redes .logoFooter .nombreFooter {
   color: white;
@@ -53,6 +54,7 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 .redes .icons .icon {
   width: 2.5rem;
@@ -181,7 +183,7 @@ p {
   }
 }
 .mockup1 {
-  width: 30rem;
+  width: 20rem;
   margin-left: 8rem;
 }
 
@@ -190,20 +192,20 @@ p {
   height: 300px;
   position: relative;
   top: 1000;
-  margin-left: 5rem;
+  margin-left: 3rem;
 }
 .txApp .infoApp {
   font-size: x-large;
   font-weight: 400;
-  margin-left: 3rem;
+  margin-left: 1rem;
   margin-right: 3rem;
   margin-top: 7rem;
 }
 
 @media (min-width: 576px) {
   .mockup1 {
-    width: 35rem;
-    margin-left: 35rem;
+    width: 33rem;
+    margin-left: 37rem;
   }
   .txApp {
     width: 900px;
@@ -223,7 +225,6 @@ p {
 @media (min-width: 991px) {
   .mockup1 {
     width: 30rem;
-    margin-left: 45rem;
   }
   .infoApp {
     font-size: large;
@@ -233,7 +234,7 @@ p {
 @media (min-width: 1200px) {
   .txApp {
     width: 900px;
-    height: 500px;
+    height: 300px;
     margin-top: 17rem;
   }
   .txApp .infoApp {
@@ -241,7 +242,7 @@ p {
     width: 700px;
   }
   .mockup1 {
-    width: 32rem;
+    width: 25rem;
     margin-left: 65rem;
   }
 }
@@ -250,7 +251,8 @@ p {
 }
 .divImagen .imgMujeresVector {
   width: 100%;
-  margin: 3rem 1rem 1rem 1rem;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
 }
 
 .preguntas {
@@ -290,7 +292,8 @@ p {
     margin-bottom: 1rem;
   }
   .divImagen .imgMujeresVector {
-    margin: 4rem 1rem 1rem 1rem;
+    margin-top: 4rem;
+    margin-bottom: 1rem;
   }
 }
 @media (min-width: 991px) {
@@ -308,6 +311,16 @@ p {
     margin-right: 7rem;
   }
 }
+main {
+  size: 100vh;
+}
+
+.titContacto {
+  display: flex;
+  justify-content: center;
+  margin-top: 5rem;
+}
+
 input {
   border-color: #a8003e;
   border-radius: 10px;
@@ -318,7 +331,7 @@ input {
 }
 
 .datos {
-  margin: 12rem 1rem 2rem 0rem;
+  margin: 4rem 1rem 1rem 0rem;
   padding-left: 1rem;
   padding-right: 1rem;
   width: 100%;
@@ -327,11 +340,21 @@ input {
   margin-bottom: 1rem;
 }
 .datos .datMsj {
-  margin-bottom: 1rem;
-  height: 180px;
+  margin-bottom: 0rem;
+  height: 120px;
+}
+
+.butEnviar {
+  padding: 0rem 1rem 1rem 1rem;
+}
+.butEnviar .botonEnviar {
+  width: 100%;
 }
 
 @media (min-width: 576px) {
+  .titContacto {
+    font-size: xx-large;
+  }
   input {
     border-radius: 12px;
     width: 500px;
@@ -340,21 +363,42 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 6rem;
   }
   .datos .datMsj {
-    height: 150px;
+    height: 110px;
+  }
+  .butEnviar {
+    display: flex;
+    justify-content: center;
+  }
+  .butEnviar .botonEnviar {
+    width: 500px;
   }
 }
 @media (min-width: 991px) {
+  .titContacto {
+    justify-content: flex-start;
+    margin-left: 7rem;
+  }
   input {
     border-radius: 10px;
+    width: 600px;
+  }
+  .datos {
+    margin-top: 4.5rem;
+  }
+  .butEnviar {
+    display: flex;
+    justify-content: center;
+  }
+  .butEnviar .botonEnviar {
     width: 600px;
   }
 }
 @media (min-width: 1200px) {
   .datos {
-    margin-top: 10rem;
-    padding-bottom: 2rem;
+    margin-top: 4rem;
   }
 }
 
