--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -9,6 +9,7 @@
         justify-content: flex-start;
 		display: flex;
 		flex-direction: row;
+        align-items: center;
 
         .nombreFooter {
             color: white;
@@ -25,6 +26,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
 
         .icon {
             width: 2.5rem;
