--- a/scss/_pregs.scss
+++ b/scss/_pregs.scss
@@ -3,7 +3,8 @@
     
     .imgMujeresVector {
         width: 100%;
-        margin: 3rem 1rem 1rem 1rem;
+        margin-top: 3rem;
+        margin-bottom: 1rem;
     }
 }
 
@@ -51,7 +52,8 @@
         margin-bottom: 1rem;
 
         .imgMujeresVector {
-            margin: 4rem 1rem 1rem 1rem;
+            margin-top: 4rem;
+            margin-bottom: 1rem;
         }
     }
 }
